--- a/02.html
+++ b/02.html
@@ -44,7 +44,10 @@
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
 
-          <div class="slide vertical active">
+          <div class="slide horizontal active">
+            <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/000016-2-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide vertical">
             <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/8P2A8683-gigapixel-art-scale-0_50x.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide horizontal">
