--- a/03.html
+++ b/03.html
@@ -45,12 +45,14 @@
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
           
-          <div class="slide vertical active">
-            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/BK3A7033-gigapixel-art-scale-0_50x-art-scale-0_50x-gigapixel.png" alt="Imagen Vertical">
-          </div>
-          <div class="slide horizontal">
+
+          <div class="slide horizontal active">
             <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/000011-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
+          <div class="slide vertical">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/BK3A7033-gigapixel-art-scale-0_50x-art-scale-0_50x-gigapixel.png" alt="Imagen Vertical">
+          </div>
+        
           <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/000027-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
