--- a/04.html
+++ b/04.html
@@ -45,7 +45,7 @@
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
           
-          <div class="slide active">
+          <div class="slide horizontal active">
               <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_00_22_09.Still003.png" alt="Imagen Horizontal">
           </div>
           <div class=" slide horizontal">
