--- a/05.html
+++ b/05.html
@@ -81,7 +81,7 @@
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
           
-          <div class="slide active">
+          <div class="slide horizontal active">
               <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/A005C001_240207_RNKA0.jpeg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
