--- a/06.html
+++ b/06.html
@@ -49,11 +49,11 @@
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
 
-          <div class="slide vertical active">
-            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/INZO.PNG--IMG_2870-gigapixel-art-scale-0_50x.jpg" alt="Imagen Vertical">
-          </div>
-          <div class="slide horizontal">
+          <div class="slide horizontal active">
             <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/INZO.PNG--IMG_2811-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide vertical">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/INZO.PNG--IMG_2870-gigapixel-art-scale-0_50x.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/INZO.PNG--IMG_2964-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
