--- a/09.html
+++ b/09.html
@@ -45,11 +45,11 @@
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
 
-          <div class="slide vertical active">
-            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/DSCF3829.jpg" alt="Imagen Vertical">
+          <div class="slide horizontal active">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/02torres_ssangyonng.png" alt="Imagen Horizontal">
           </div>
-          <div class="slide horizontal">
-              <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/02torres_ssangyonng.png" alt="Imagen Horizontal">
+          <div class="slide vertical">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/DSCF3829.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/03torres_ssangyonng.png" alt="Imagen Horizontal">
