--- a/14.html
+++ b/14.html
@@ -53,11 +53,11 @@
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
 
-          <div class="slide vertical active">
-            <img src="proyectos/FOTOS WEB/16 SHADOWS _ KARONT/1.png" alt="Imagen Vertical">
-          </div>
-          <div class="slide horizontal">
+          <div class="slide horizontal active">
             <img src="proyectos/FOTOS WEB/16 SHADOWS _ KARONT/01shadows.png" alt="Imagen Horizontal">
+          </div>
+          <div class="slide vertical">
+            <img src="proyectos/FOTOS WEB/16 SHADOWS _ KARONT/1.png" alt="Imagen Vertical">
           </div>
           <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/16 SHADOWS _ KARONT/02shadows.png" alt="Imagen Horizontal">
