--- a/15.html
+++ b/15.html
@@ -111,14 +111,14 @@
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
           
-          <div class="slide vertical active">
+          <div class="slide horizontal active">
+            <img src="proyectos/FOTOS WEB/17 HUMAN STORE _ eBay/02.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide vertical">
             <img src="proyectos/FOTOS WEB/17 HUMAN STORE _ eBay/07.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
             <img src="proyectos/FOTOS WEB/17 HUMAN STORE _ eBay/10.jpg" alt="Imagen Vertical">
-          </div>
-          <div class="slide horizontal">
-            <img src="proyectos/FOTOS WEB/17 HUMAN STORE _ eBay/02.jpg" alt="Imagen Horizontal">
           </div>
           
           <div class="slide vertical">
