--- a/22.html
+++ b/22.html
@@ -46,14 +46,14 @@
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
           
-          <div class="slide vertical active">
+          <div class="slide horizontal active">
+            <img src="proyectos/FOTOS WEB/26 3KATAS _ CHICO BLANCO ft SOTO ASA/SON06707.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide vertical">
             <img src="proyectos/FOTOS WEB/26 3KATAS _ CHICO BLANCO ft SOTO ASA/SON06734.png" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
             <img src="proyectos/FOTOS WEB/26 3KATAS _ CHICO BLANCO ft SOTO ASA/SON06808.png" alt="Imagen Vertical">
-          </div>
-          <div class="slide horizontal active">
-            <img src="proyectos/FOTOS WEB/26 3KATAS _ CHICO BLANCO ft SOTO ASA/SON06707.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/26 3KATAS _ CHICO BLANCO ft SOTO ASA/SON06798-2.png" alt="Imagen Horizontal">
