--- a/about.html
+++ b/about.html
@@ -13,11 +13,11 @@
 
     <div id="header"></div>
   
-    <main class="flex-grow">
+    <main class="flex-grow-1">
 
       <!-- <img src="../images/foto prueba fondo_Mesa de trabajo 1.png" alt="Imagen 1" class="w-100 h-100"> -->
       
-      <section class="mb-8 position-relative overflow-hidden">
+      <section class="h-screen mb-8 position-relative overflow-hidden">
         <!-- <div class="background-image-sello"></div> -->
         <div><img src="images/foto prueba fondo_Mesa de trabajo 1.png" alt="Imagen 1" class="w-100 h-100"></div>
         <div class="z-10 content-overlay">
