--- a/16.html
+++ b/16.html
@@ -93,7 +93,7 @@
         <h4 class="h4-h4">Credits:</h4> 
         <div class="credits-grid text-black">
           <div class="credit-column">
-            <p>Direction Production: @kinkifactory</p>
+            <p>Direction Production: @pedrotriviñofabro</p>
             <p>DOP & Edit: @oriolcolomar</p>
             <p>Camera Aux & Color: @enyarodriguez</p>
             <p>Gaffer: @pauum94</p>
@@ -107,14 +107,7 @@
           </div>
         </div>
 
-        <div class="credits-grid text-black">
-          <div class="credit-column">
-            <p>Additional Starring:</p>
-            <p>@laguiridetussuenos @lil.deve11 @marianben @mateo.is.online @xeniaorti @marxi.0711</p>
-            <p>@flama.ph @co.roni19 @mathew_yanez @looks.fragile.after.all @aranpetit @maxmoodhair</p>
-            <p>@pa-colo__ @alanneil @tulidotcom @hijxdelfuego @joancallau</p>
-          </div>
-        </div>
+       
       </section>
                       
     </main>
