--- a/17.html
+++ b/17.html
@@ -85,7 +85,7 @@
           <div class="credit-column">
             <p>Featured in <a href="https://www.highsnobiety.com" target="_blank">Highsnobiety</a></p>
             <p>@ssstufff.supermarket</p>
-            <p>Directed by @guillermoaliaga</p>
+            <p>Directed by @pedrotriviñofabro</p>
             <p>DOP & Editor @oriolcolomar</p>
             <p>Camera AF & Color @enyarodriguez</p>
             <p>FX @prettydios</p>
