--- a/21.html
+++ b/21.html
@@ -75,10 +75,7 @@
           But always striking, agile, simple and direct.
         </p>
         <p class="p-p">
-          Yallo connects people through devices
-        </p>
-        <p class="p-p">
-          This is why we use the screen of the devices as the connection between the scenes (people).
+          Yallo connects people through devices. This is why we use the screen of the devices as the connection between the scenes (people).
         </p>
         
         <div class="custom-slider">
