--- a/index.html
+++ b/index.html
@@ -241,6 +241,54 @@
           </a>
         </div>
 
+        <div class="gallery-item">
+          <a href="23.html">
+            <img src="gifs/23-pPIXEL GOOD NEWS.gif" alt="Portfolio Image 23" id="gif23">
+            <audio id="audio23" preload="auto">
+              <source src="gifs/23-ambience-byron-bay-farmland-morning-bird-chatter-239928.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+
+        <div class="gallery-item">
+          <a href="24.html">
+            <img src="gifs/24-PIXEL JUNIOR.gif" alt="Portfolio Image 24" id="gif24">
+            <audio id="audio24" preload="auto">
+              <source src="gifs/24-crow-39377.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+
+        <div class="gallery-item">
+          <a href="25.html">
+            <img src="gifs/25-PIXEL I LOVE BCN.gif" alt="Portfolio Image 25" id="gif25">
+            <audio id="audio25" preload="auto">
+              <source src="gifs/25-crow-39377.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="26.html">
+            <img src="gifs/26-PIXEL MAREMOTO.gif" alt="Portfolio Image 26" id="gif26">
+            <audio id="audio26" preload="auto">
+              <source src="gifs/26-crow-39377.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="27.html">
+            <img src="gifs/27-PIXEL JUNIOR.gif" alt="Portfolio Image 27" id="gif27">
+            <audio id="audio27" preload="auto">
+              <source src="gifs/27-crow-39377.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+
         
 
         <!-- Aquí se pueden añadir más imágenes -->
@@ -293,6 +341,10 @@
       { imgId: 'gif20', pixelSrc: 'gifs/20-PIXEL CIUTAT.gif', textSrc: 'gifs/20-NO PIXEL CIUTAT.gif', audioId: 'audio20' },
       { imgId: 'gif21', pixelSrc: 'gifs/21-PIXEL YALLO.gif', textSrc: 'gifs/21-NO PIXEL YALLO.gif', audioId: 'audio21' },
       { imgId: 'gif22', pixelSrc: 'gifs/22-PIXEL 4 CATAS.gif', textSrc: 'gifs/22-NO PIXEL 4 CATAS.gif', audioId: 'audio22' },
+      { imgId: 'gif23', pixelSrc: 'gifs/23-pPIXEL GOOD NEWS.gif', textSrc: 'gifs/23-NO pPIXEL GOOD NEWS.gif', audioId: 'audio23' },
+      { imgId: 'gif24', pixelSrc: 'gifs/24-PIXEL JUNIOR.gif', textSrc: 'gifs/24-NO PIXEL JUNIOR.gif', audioId: 'audio24' },
+      { imgId: 'gif25', pixelSrc: 'gifs/25-PIXEL I LOVE BCN.gif', textSrc: 'gifs/25-NO PIXEL I LOVE BCN.gif', audioId: 'audio25' },
+      { imgId: 'gif26', pixelSrc: 'gifs/26-PIXEL MAREMOTO.gif', textSrc: 'gifs/26-NO PIXEL MAREMOTO.gif', audioId: 'audio26' },
     ];
 
     items.forEach(item => {
