--- a/02.html
+++ b/02.html
@@ -40,7 +40,7 @@
 
         <div class="custom-slider">
 
-          <button class="arrow left-arrow" onclick="moveSlide(-1)">
+          <button class="arrow left-arrow">
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
 
@@ -85,7 +85,7 @@
               <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/000020-gigapixel-art-scale-0_50x.jpg" alt="Imagen Vertical">
           </div>
 
-          <button class="arrow right-arrow" onclick="moveSlide(1)">
+          <button class="arrow right-arrow">
             <img src="images/FLECHITAS-02.png" alt="Flecha derecha">
           </button>
 
@@ -151,7 +151,7 @@
     
   </div>
 
-  <script src="../pedroTF/Scripts/carousel.js"></script>
+  <script src="Scripts/carousel.js"></script>
   <script>
     // Función para cargar dinámicamente el contenido HTML
     function loadHTML(elementId, filePath) {
