--- a/03.html
+++ b/03.html
@@ -41,7 +41,7 @@
 
         <div class="custom-slider">
 
-          <button class="arrow left-arrow" onclick="moveSlide(-1)">
+          <button class="arrow left-arrow">
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
           
@@ -81,7 +81,7 @@
             <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/BK3A7088-1-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
 
-          <button class="arrow right-arrow" onclick="moveSlide(1)">
+          <button class="arrow right-arrow">
             <img src="images/FLECHITAS-02.png" alt="Flecha derecha">
           </button>
 
@@ -139,7 +139,7 @@
     
   </div>
 
-  <script src="../pedroTF/Scripts/carousel.js"></script>
+  <script src="Scripts/carousel.js"></script>
   <!-- Código JavaScript para manejar los eventos de hover y reproducir audio -->
   <script>
     // Función para cargar dinámicamente el contenido HTML
