--- a/07.html
+++ b/07.html
@@ -40,7 +40,7 @@
 
         <div class="custom-slider">
 
-          <button class="arrow left-arrow" onclick="moveSlide(-1)">
+          <button class="arrow left-arrow">
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
 
@@ -63,7 +63,7 @@
             <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104706.png" alt="Imagen Vertical">
           </div>
 
-          <button class="arrow right-arrow" onclick="moveSlide(1)">
+          <button class="arrow right-arrow">
             <img src="images/FLECHITAS-02.png" alt="Flecha derecha">
           </button>
           
@@ -112,7 +112,7 @@
     
   </div>
 
-  <script src="../pedroTF/Scripts/carousel.js"></script>
+ <script src="Scripts/carousel.js"></script>
   <!-- Código JavaScript para manejar los eventos de hover y reproducir audio -->
   <script>
     // Función para cargar dinámicamente el contenido HTML
