--- a/10.html
+++ b/10.html
@@ -40,7 +40,7 @@
 
         <div class="custom-slider">
 
-          <button class="arrow left-arrow" onclick="moveSlide(-1)">
+          <button class="arrow left-arrow">
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
 
@@ -63,7 +63,7 @@
             <img src="proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_9449-Editar-gigapixel-art-scale-0_30x.jpg" alt="Imagen Vertical">
           </div>
 
-          <button class="arrow right-arrow" onclick="moveSlide(1)">
+          <button class="arrow right-arrow">
             <img src="images/FLECHITAS-02.png" alt="Flecha derecha">
           </button>
 
@@ -122,7 +122,7 @@
     
   </div>
 
-  <script src="../pedroTF/Scripts/carousel.js"></script>
+ <script src="Scripts/carousel.js"></script>
   <!-- Código JavaScript para manejar los eventos de hover y reproducir audio -->
   <script>
     // Función para cargar dinámicamente el contenido HTML
