--- a/11.html
+++ b/11.html
@@ -43,7 +43,7 @@
 
         <div class="custom-slider">
 
-          <button class="arrow left-arrow" onclick="moveSlide(-1)">
+          <button class="arrow left-arrow" >
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
           
@@ -75,7 +75,7 @@
             <img src="proyectos/FOTOS WEB/11 LEMON SODA/L1005163r-gigapixel-art-scale-0_20x.JPG" alt="Imagen Horizontal">
           </div>
 
-          <button class="arrow right-arrow" onclick="moveSlide(1)">
+          <button class="arrow right-arrow">
             <img src="images/FLECHITAS-02.png" alt="Flecha derecha">
           </button>
 
@@ -139,7 +139,7 @@
     
   </div>
 
-  <script src="../pedroTF/Scripts/carousel.js"></script>
+ <script src="Scripts/carousel.js"></script>
   <!-- Código JavaScript para manejar los eventos de hover y reproducir audio -->
   <script>
     // Función para cargar dinámicamente el contenido HTML
