--- a/26.html
+++ b/26.html
@@ -48,7 +48,7 @@
         
         <div class="custom-slider">
 
-          <button class="arrow left-arrow" onclick="moveSlide(-1)">
+          <button class="arrow left-arrow">
             <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
           </button>
 
@@ -69,7 +69,7 @@
           </div>
 
 
-          <button class="arrow right-arrow" onclick="moveSlide(1)">
+          <button class="arrow right-arrow">
             <img src="images/FLECHITAS-02.png" alt="Flecha derecha">
           </button>
 
@@ -159,7 +159,7 @@
     
   </div>
 
-  <script src="../pedroTF/Scripts/carousel.js"></script>
+ <script src="Scripts/carousel.js"></script>
   <!-- Código JavaScript para manejar los eventos de hover y reproducir audio -->
   <script>
     // Función para cargar dinámicamente el contenido HTML
