--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
         <a href="https://www.linkedin.com/in/kumo-project-0b817a341/" title="LinkedIn">(LI)</a>
     </div>
       
-    <div class="left-group foot3">
+    <div class="left-group-foot3">
     <div class="left-group img"><img src="images/animacion.gif" alt="piojo"></div>
     <div class="foot3">MAD/BCN/CDMX</div>
     </div>
