--- a/26.html
+++ b/26.html
@@ -20,15 +20,13 @@
       <iframe 
         width="560" 
         height="315" 
-        src="https://www.youtube.com/embed/HrrRy5cjE2M" 
+        src="https://www.youtube.com/embed/6mz0dkTHCk8" 
         title="YouTube video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
       </iframe>
   </div>
-
-
     <main class="flex-grow">
       <section class="my-8">
         <h4 class="h4-h4">Creative Direction / Direction for:</h4>
@@ -53,19 +51,34 @@
           </button>
 
           <div class="slide horizontal active">
-            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/BARSELONA-WEB-2.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/26_AR43058.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/barselouna-web-1.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/26_AR43067.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/BARSELOUNA-WEB-3.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/26_AR43076.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/26_AR43080.jpg" alt="Imagen Vertical">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/26_AR43098.jpg" alt="Imagen Vertical">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/26_AR43130.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/barselouna-web-4.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/26_AR43108.jpg" alt="Imagen Vertical">
           </div>
-          <div class="slide vertical">
-            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/barselouna-web-5-copia.jpg" alt="Imagen Vertical">
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/26_AR43143.jpg" alt="Imagen Vertical">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/26_AR43167.jpg" alt="Imagen Vertical">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/44 BARSELOUNA/26_AR43173.jpg" alt="Imagen Vertical">
           </div>
 
 
