--- a/footer.html
+++ b/footer.html
@@ -16,6 +16,7 @@
     <div class="left-group-foot3">
         <div class="left-group img"><img src="images/animacion.gif" alt="piojo"></div>
         <div class="foot3">MAD/BCN/CDMX</div>
+        <p class="footer_rights">All rights reserved to KUMO CP© 2025</p>
     </div>
     
 </footer>
