--- a/index.html
+++ b/index.html
@@ -90,7 +90,15 @@
             </audio>
           </a>
         </div>
-
+        <div class="gallery-item">
+          <a href="17.html">
+            <img src="gifs/17-PIXEL MARKET.gif" alt="Portfolio Image 17" id="gif17">
+            <audio id="audio17" preload="auto">
+              <source src="gifs/17-bird-chrip-126647.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
         <div class="gallery-item">
           <a href="21.html">
             <img src="gifs/21-PIXEL YALLO.gif" alt="Portfolio Image 21" id="gif21">
@@ -110,37 +118,15 @@
             </audio>
           </a>
         </div>
-
         <div class="gallery-item">
-          <a href="17.html">
-            <img src="gifs/17-PIXEL MARKET.gif" alt="Portfolio Image 17" id="gif17">
-            <audio id="audio17" preload="auto">
-              <source src="gifs/17-bird-chrip-126647.mp3" type="audio/mp3">
+          <a href="26.html">
+            <img src="gifs/26-PIXEL MAREMOTO.gif" alt="Portfolio Image 26" id="gif26">
+            <audio id="audio26" preload="auto">
+              <source src="gifs/26-crow-39377.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </a>
         </div>
-
-        <div class="gallery-item">
-          <a href="01.html">
-            <img src="gifs/01-PIXEL GIFF.gif" alt="Portfolio Image 1" id="gif1">
-            <audio id="audio1" preload="auto">
-              <source src="gifs/01-bird-pajaro-61928.mp3" type="audio/mp3">
-              Your browser does not support the audio element.
-            </audio>
-          </a>
-        </div>
-
-        <div class="gallery-item">
-          <a href="03.html">
-            <img src="gifs/03-PIXEL XCELIRATE.gif" alt="Portfolio Image 3" id="gif3">
-            <audio id="audio3" preload="auto">
-              <source src="gifs/03-cukrowka-27715.mp3" type="audio/mp3">
-              Your browser does not support the audio element.
-            </audio>
-          </a>
-        </div>
-
         <div class="gallery-item">
           <a href="04.html">
             <img src="gifs/04-PIXEL CAN PIZZA.gif" alt="Portfolio Image 4" id="gif4">
@@ -150,7 +136,6 @@
             </audio>
           </a>
         </div>
-
         <div class="gallery-item">
           <a href="06.html">
             <img src="gifs/06-PIXEL LUNAKI.gif" alt="Portfolio Image 6" id="gif6">
@@ -160,37 +145,6 @@
             </audio>
           </a>
         </div>
-
-        <div class="gallery-item">
-          <a href="07.html">
-            <img src="gifs/07-PIXEL NUDE.gif" alt="Portfolio Image 7" id="gif7">
-            <audio id="audio7" preload="auto">
-              <source src="gifs/07-bird-voice-7711.mp3" type="audio/mp3">
-              Your browser does not support the audio element.
-            </audio>
-          </a>
-        </div>
-
-        <div class="gallery-item">
-          <a href="08.html">
-            <img src="gifs/08-PIXEL MCDONALS.gif" alt="Portfolio Image 8" id="gif8">
-            <audio id="audio8" preload="auto">
-              <source src="gifs/08-forest-163012.mp3" type="audio/mp3">
-              Your browser does not support the audio element.
-            </audio>
-          </a>
-        </div>
-
-        <div class="gallery-item">
-          <a href="11.html">
-            <img src="gifs/11-PIXEL LEMON SODA.gif" alt="Portfolio Image 11" id="gif11">
-            <audio id="audio11" preload="auto">
-              <source src="gifs/11-the-pigeon-sound-sfx-253208.mp3" type="audio/mp3">
-              Your browser does not support the audio element.
-            </audio>
-          </a>
-        </div>
-
         <div class="gallery-item">
           <a href="12.html">
             <img src="gifs/12-PIXEL MANSO.gif" alt="Portfolio Image 12" id="gif12">
@@ -220,7 +174,6 @@
             </audio>
           </a>
         </div>
-
         <div class="gallery-item">
           <a href="20.html">
             <img src="gifs/20-PIXEL CIUTAT.gif" alt="Portfolio Image 20" id="gif20">
@@ -240,17 +193,6 @@
             </audio>
           </a>
         </div>
-
-        <div class="gallery-item">
-          <a href="23.html">
-            <img src="gifs/23-pPIXEL GOOD NEWS.gif" alt="Portfolio Image 23" id="gif23">
-            <audio id="audio23" preload="auto">
-              <source src="gifs/23-ambience-byron-bay-farmland-morning-bird-chatter-239928.mp3" type="audio/mp3">
-              Your browser does not support the audio element.
-            </audio>
-          </a>
-        </div>
-
         <div class="gallery-item">
           <a href="24.html">
             <img src="gifs/24-PIXEL JUNIOR.gif" alt="Portfolio Image 24" id="gif24">
@@ -260,7 +202,6 @@
             </audio>
           </a>
         </div>
-
         <div class="gallery-item">
           <a href="25.html">
             <img src="gifs/25-PIXEL I LOVE BCN.gif" alt="Portfolio Image 25" id="gif25">
@@ -271,23 +212,69 @@
           </a>
         </div>
         <div class="gallery-item">
-          <a href="26.html">
-            <img src="gifs/26-PIXEL MAREMOTO.gif" alt="Portfolio Image 26" id="gif26">
-            <audio id="audio26" preload="auto">
-              <source src="gifs/26-crow-39377.mp3" type="audio/mp3">
-              Your browser does not support the audio element.
-            </audio>
-          </a>
-        </div>
-        <div class="gallery-item">
           <a href="27.html">
-            <img src="gifs/27-PIXEL JUNIOR.gif" alt="Portfolio Image 27" id="gif27">
+            <img src="gifs/27-NO_PIXEL_WAPUF.gif" alt="Portfolio Image 27" id="gif27">
             <audio id="audio27" preload="auto">
               <source src="gifs/27-crow-39377.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </a>
         </div>
+        <div class="gallery-item">
+          <a href="11.html">
+            <img src="gifs/11-PIXEL LEMON SODA.gif" alt="Portfolio Image 11" id="gif11">
+            <audio id="audio11" preload="auto">
+              <source src="gifs/11-the-pigeon-sound-sfx-253208.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="08.html">
+            <img src="gifs/08-PIXEL MCDONALS.gif" alt="Portfolio Image 8" id="gif8">
+            <audio id="audio8" preload="auto">
+              <source src="gifs/08-forest-163012.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="23.html">
+            <img src="gifs/23-pPIXEL GOOD NEWS.gif" alt="Portfolio Image 23" id="gif23">
+            <audio id="audio23" preload="auto">
+              <source src="gifs/23-ambience-byron-bay-farmland-morning-bird-chatter-239928.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="07.html">
+            <img src="gifs/07-PIXEL NUDE.gif" alt="Portfolio Image 7" id="gif7">
+            <audio id="audio7" preload="auto">
+              <source src="gifs/07-bird-voice-7711.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="01.html">
+            <img src="gifs/01_PIXEL_GIFF.gif" alt="Portfolio Image 1" id="gif1">
+            <audio id="audio1" preload="auto">
+              <source src="gifs/01-bird-pajaro-61928.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="03.html">
+            <img src="gifs/03-PIXEL XCELIRATE.gif" alt="Portfolio Image 3" id="gif3">
+            <audio id="audio3" preload="auto">
+              <source src="gifs/03-cukrowka-27715.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+       
       </div>
     </main>
 
@@ -318,7 +305,7 @@
   
     // 3 - Array fotos pixeladas o con título
     const items = [
-      { imgId: 'gif1',  pixelSrc: 'gifs/01-PIXEL GIFF.gif',               textSrc: 'gifs/01-NO PIXEL WALLAPOP.gif', audioId: 'audio1' },
+      { imgId: 'gif1',  pixelSrc: 'gifs/01_PIXEL_GIFF.gif',               textSrc: 'gifs/01_NO_PIXEL_WALLAPOP.gif', audioId: 'audio1' },
       { imgId: 'gif2',  pixelSrc: 'gifs/02-PIXEL KARONT.gif',             textSrc: 'gifs/02-NO PIXEL KARONT.gif',   audioId: 'audio2' },
       { imgId: 'gif3',  pixelSrc: 'gifs/03-PIXEL XCELIRATE.gif',          textSrc: 'gifs/03-NO PIXEL XCELIRATE.gif',audioId: 'audio3' },
       { imgId: 'gif4',  pixelSrc: 'gifs/04-PIXEL CAN PIZZA.gif',          textSrc: 'gifs/04-NO PIXEL CAN PIZZA.gif',audioId: 'audio4' },
@@ -344,6 +331,8 @@
       { imgId: 'gif24', pixelSrc: 'gifs/24-PIXEL JUNIOR.gif',             textSrc: 'gifs/24-NO PIXEL JUNIOR.gif',   audioId: 'audio24' },
       { imgId: 'gif25', pixelSrc: 'gifs/25-PIXEL I LOVE BCN.gif',         textSrc: 'gifs/25-NO PIXEL I LOVE BCN.gif', audioId: 'audio25' },
       { imgId: 'gif26', pixelSrc: 'gifs/26-PIXEL MAREMOTO.gif',           textSrc: 'gifs/26-NO PIXEL MAREMOTO.gif', audioId: 'audio26' },
+      { imgId: 'gif27', pixelSrc: 'gifs/27-PIXEL_WAPUF.gif',           textSrc: 'gifs/27-NO_PIXEL_WAPUF.gif', audioId: 'audio26' },
+
     ];
   
     // 4 - Detectar si es Safari +  Mac ( no Iphone )
