--- a/23.html
+++ b/23.html
@@ -18,7 +18,7 @@
     <!-- Div para el video de Vimeo -->
     <div class="video-container">
       <iframe 
-        src="https://vimeo.com/705304940" 
+        src="https://player.vimeo.com/video/705304940" 
         title="Vimeo video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -27,7 +27,7 @@
 
     <div class="video-container">
         <iframe 
-          src="https://vimeo.com/manage/videos/706898152" 
+          src="https://player.vimeo.com/video/706898152" 
           title="Vimeo video player" 
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
