--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="header-logo-images">
-    <a href="index.html"><img src="images/LOGOcp.png" alt="Pedro Trivino Logo" class="logo"></a>
+    <a href="index.html"><img src="images/LOGO_Bueno.png" alt="Pedro Trivino Logo" class="logo"></a>
     <img src="images/animacion.gif" alt="Pedro Trivino Logo" class="logo">
   </div>
   <div class="header-font">
