primera sesion modificacion: links, fotos, about

--- a/16.html
+++ b/16.html
@@ -18,7 +18,7 @@
     <!-- Div para el video de Vimeo -->
     <div class="video-container">
       <iframe 
-        src="https://player.vimeo.com/video/493712298" 
+        src="https://www.youtube.com/embed/FIvpsWYC--U" 
         title="Vimeo video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
