--- a/21.html
+++ b/21.html
@@ -18,7 +18,7 @@
     <!-- Div para el video de Vimeo -->
     <div class="video-container">
       <iframe 
-        src="https://player.vimeo.com/video/678621750" 
+        src="https://www.youtube.com/embed/A3DCLVvIE_A" 
         title="Vimeo video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -26,38 +26,13 @@
     </div>
     <div class="video-container">
       <iframe 
-        src="https://player.vimeo.com/video/666735144" 
+        src="https://www.youtube.com/embed/fhUkqZwRR6g" 
         title="Vimeo video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen></iframe>
     </div>
-    <div class="video-container">
-      <iframe 
-        src="https://player.vimeo.com/video/666735506" 
-        title="Vimeo video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen></iframe>
-    </div>
-    <div class="video-container">
-      <iframe 
-        src="https://player.vimeo.com/video/666736016" 
-        title="Vimeo video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen></iframe>
-    </div>
-    <div class="video-container">
-      <iframe 
-        src="https://player.vimeo.com/video/666736647" 
-        title="Vimeo video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen></iframe>
-    </div>
-
-
+    
     <main class="flex-grow">
       <section class="my-8">
         <h4 class="h4-h4">Direction for:</h4>
