--- a/about.html
+++ b/about.html
@@ -8,18 +8,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
   <div class="h-screen d-flex flex-column">
 
     <div id="header"></div>
-  
-    <main class="flex-grow-1">
 
-      <!-- <img src="../images/foto prueba fondo_Mesa de trabajo 1.png" alt="Imagen 1" class="w-100 h-100"> -->
-      
+    <main class="flex-grow-1">      
       <section class="h-screen mb-8 position-relative overflow-hidden">
-        <!-- <div class="background-image-sello"></div> -->
-          <div class="z-10 content-overlay">
+        <div class="background-gif"></div>
+
+          <div class=" content-overlay" id="about1">
           <div class="max-w-2xl">
             <p class="p-p">
               KUMO better known as Pedro Triviño´s a versatile creative professional, who has explored numerous fields, with a particular focus on Creative Direction, Audiovisual Direction and Production, areas in which he has been most active in recent years.</p>
